redo interdependent cond coop with example

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -53,7 +53,9 @@
 
       <ul>
 
-        <li>{{ consent_payment_toluna|safe }}</li>
+          <li>{{ consent_payment_toluna1|safe }}</li>
+          <li>{{ consent_payment_toluna2|safe }}</li>
+          <li>{{ consent_payment_toluna3|safe }}</li>
 
       </ul>
 
