--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-        <b>{{ intro_blocks }}</b>
+        {{ intro_blocks }}
     </p>
 
     <h6><u>{{ intro_block1_title }}</u></h6>
@@ -75,7 +75,7 @@
     </p>
 
     <p>
-        <b>{{ intro_blocks }}</b>
+        {{ intro_blocks }}
     </p>
 
     <h6><u>{{ intro_block1_title }}</u></h6>
