--- a/crowding_out/ConditionalCoopInterdepPage.html
+++ b/crowding_out/ConditionalCoopInterdepPage.html
@@ -615,7 +615,9 @@
 <!--        -->
 <!--        <br>-->
 
-
+        <p style="text-align: center; ">
+            <i>{{ cond_coop_new_decision|safe }}</i>
+        </p>
 
         <p style="text-align: center; ">
             {{ cond_coop_group|safe }}
@@ -625,12 +627,21 @@
             {{ cond_coop_interdependent_explanation1|safe }} {{ cond_coop_interdependent_explanation2|safe }} {{ cond_coop_interdependent_explanation3|safe }}
         </p>
 
+<!--        <p style="text-align: center; ">-->
+<!--            {{ cond_coop_interdependent_explanation3|safe }}-->
+<!--        </p>-->
+
 
         <p style="text-align: center; ">
-            {{ cond_coop_question|safe }}
+            {{ cond_coop_question_donor_nondonor_interdep|safe }}
         </p>
 
         <input type="hidden" name="cond_coop_interdep" id="selected-proportion-1">
+
+        <!-- New full-width unconditional option below -->
+        <div class="proportion-fullwidth" data-value="0">
+            {{ unconditional_give|safe }}
+        </div>
 
         <div class="conditional-row-wrapper">
             <!-- Left: clickable options -->
@@ -649,8 +660,8 @@
         </div>
 
         <!-- New full-width unconditional option below -->
-        <div class="proportion-fullwidth" data-value="0">
-            {{ unconditional|safe }}
+        <div class="proportion-fullwidth" data-value="100">
+            {{ unconditional_keep|safe }}
         </div>
 
 
