--- a/crowding_out/ConditionalCoopPage.html
+++ b/crowding_out/ConditionalCoopPage.html
@@ -578,15 +578,24 @@
 <!--        -->
 <!--        <br>-->
 
+<!--        <p style="text-align: center; ">-->
+<!--            <i>{{ cond_coop_info|safe }}</i>-->
+<!--        </p>-->
+
         <p style="text-align: center; ">
-            <i>{{ cond_coop_info|safe }}</i>
+            <i>{{ cond_coop_new_decision|safe }}</i>
         </p>
 
         <p style="text-align: center; ">
-            {{ cond_coop_question|safe }}
+            {{ cond_coop_question_donor_nondonor_indep|safe }}
         </p>
 
         <input type="hidden" name="cond_coop" id="selected-proportion-1">
+
+        <!-- New full-width unconditional option below -->
+        <div class="proportion-fullwidth" data-value="0">
+            {{ unconditional_give|safe }}
+        </div>
 
         <div class="conditional-row-wrapper">
             <!-- Left: clickable options -->
@@ -605,8 +614,8 @@
         </div>
 
         <!-- New full-width unconditional option below -->
-        <div class="proportion-fullwidth" data-value="0">
-            {{ unconditional|safe }}
+        <div class="proportion-fullwidth" data-value="100">
+            {{ unconditional_keep|safe }}
         </div>
 
 
