bracket errors for languages

--- a/baseline_trials/UniversalNormPage.html
+++ b/baseline_trials/UniversalNormPage.html
@@ -290,7 +290,7 @@
         </p>
 
         <p style="text-align: center;">
-            <b> {{ univ_norm_question|safe }} </b>
+            {{ univ_norm_question|safe }}
         </p>
 
 
