--- a/pref_2PP_3PP/Pref_2PP_3PP.html
+++ b/pref_2PP_3PP/Pref_2PP_3PP.html
@@ -1,7 +1,7 @@
 {{ block title }}
 
 <div class="block-header">
-    {{ button_block|safe }} 2
+    {{ button_block|safe }}
 </div>
 
 <p style="text-align: center; font-size: 26px;  "> {{ button_decision }} {{ participant.decision_page_number }} </p>
