--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -1,7 +1,7 @@
 {{ block title }}
 
 <p style="font-size: 22px; text-decoration: underline;">
-    {{ button_block|safe }} 1
+    {{ button_block|safe }}
 </p>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} {{player.round_number}} </p>
