--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -2,7 +2,7 @@
 {{ block title }}
 
 <div class="block-header">
-    {{ button_block|safe }} 1
+    {{ button_block|safe }}
 </div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
