--- a/baseline_trials/UniversalNormPage.html
+++ b/baseline_trials/UniversalNormPage.html
@@ -1,7 +1,7 @@
 {{ block title }}
 
 <div class="block-header">
-    {{ button_block|safe }} 1
+    {{ button_block|safe }}
 </div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} {{player.round_number}} </p>
