--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
 <p style="font-size: 22px; text-decoration: underline;">
     {{ button_block|safe }}
 </p>
@@ -186,7 +190,11 @@
 
         <div class='responsive-div'>
 
+            <div style="text-align: center;">
+
             <p> {{ attention_check1|safe }} </p>
+
+                </div>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention1">
@@ -205,7 +213,11 @@
 
         <div class='responsive-div'>
 
+            <div style="text-align: center;">
+
             <p> {{ attention_check2|safe }} </p>
+
+                </div>
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention2">
