--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -1,11 +1,15 @@
 {% block title %}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
 <!--    <div style="display: flex; justify-content: flex-end">-->
 <!--        <img/>-->
 <!--    </div>-->
 
 
-<p style="text-align: center; font-size: 26px;  ">{{ consent_title }}</p>
+<p style="text-align: center; font-size: 26px;  ">{{ consent_title|safe }}</p>
 
 {% endblock %}
 
@@ -31,6 +35,7 @@
 <div class="card-body">
 
   <div>
+
       <p>
           {{ consent_thank_you }}
       </p>
