--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
 <div class="block-header">
     {{ button_block|safe }}
 </div>
@@ -49,7 +53,7 @@
     receiver_endowment = {{ C.receiver_endowment }}
 
     /// Function for showing customized error messages
-    var error1 = "{{ error1 }}";
+    var error1 = "{{ error1|safe }}";
 
     const errorDiv = document.querySelector('.otree-form-errors');
 
@@ -282,9 +286,9 @@
 
         {% if player.round_number < 3 %}
             <p style="text-align: center;  ">
-                <b> {{ dict_norm_instru }} </b>
+                <b> {{ dict_norm_instru|safe }} </b>
                 <br>
-                {{ dict_norm_incentive }}
+                {{ dict_norm_incentive|safe }}
             </p>
         {% endif %}
 
@@ -340,19 +344,19 @@
             </div>
 
             <p style="text-align: center; ">
-                {{dict_norm_summary }}
+                {{dict_norm_summary|safe }}
                 <br>
-                {{ dict_norm_question }}
+                {{ dict_norm_question|safe }}
             </p>
 
             <div class='numbers'>
                 <div class="number-row" data-index="{{ dic_norm_decision.index }}" data-input="selected-norm-{{ dic_norm_decision.index }}">
-                    <div class="norm" data-value="0" data-index="{{ dic_norm_decision.index }}">{{ very_inappropriate }}</div>
-                    <div class="norm" data-value="1" data-index="{{ dic_norm_decision.index }}">{{ inappropriate  }}</div>
-                    <div class="norm" data-value="2" data-index="{{ dic_norm_decision.index }}">{{ slightly_inappropriate  }}</div>
-                    <div class="norm" data-value="3" data-index="{{ dic_norm_decision.index }}">{{ slightly_appropriate }}</div>
-                    <div class="norm" data-value="4" data-index="{{ dic_norm_decision.index }}">{{ appropriate }}</div>
-                    <div class="norm" data-value="5" data-index="{{ dic_norm_decision.index }}">{{ very_appropriate }}</div>
+                    <div class="norm" data-value="0" data-index="{{ dic_norm_decision.index }}">{{ very_inappropriate|safe }}</div>
+                    <div class="norm" data-value="1" data-index="{{ dic_norm_decision.index }}">{{ inappropriate|safe  }}</div>
+                    <div class="norm" data-value="2" data-index="{{ dic_norm_decision.index }}">{{ slightly_inappropriate|safe  }}</div>
+                    <div class="norm" data-value="3" data-index="{{ dic_norm_decision.index }}">{{ slightly_appropriate|safe }}</div>
+                    <div class="norm" data-value="4" data-index="{{ dic_norm_decision.index }}">{{ appropriate|safe }}</div>
+                    <div class="norm" data-value="5" data-index="{{ dic_norm_decision.index }}">{{ very_appropriate|safe }}</div>
                 </div>
             </div>
         </div>
@@ -364,7 +368,7 @@
 
 
         <p style="text-align: center; ">
-            <b style='color: red; '>{{ dict_decision_endowment }}</b>
+            <b style='color: red; '>{{ dict_decision_endowment|safe }}</b>
             <br> <br>
 
             {% if "2PP" in player.treatment %}
@@ -375,7 +379,7 @@
         <div style="text-align: center; margin-bottom: 20px">
 
             {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment %}
-                {{ dict_decision_countries}}
+                {{ dict_decision_countries|safe}}
             {% endif %}
         </div>
 
@@ -397,15 +401,15 @@
                 <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/{{ image }}">
 
                 <div class="person-a">
-                        <b>{{ person_a }}</b>
+                        <b>{{ person_a|safe }}</b>
                     </div>
                     <div class="person-b">
-                        <b>{{ person_b }}</b>
+                        <b>{{ person_b|safe }}</b>
                 </div>
 
                 {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
                     <div class="person-c">
-                        <b>{{ person_c }}</b>
+                        <b>{{ person_c|safe }}</b>
                     </div>
                 {% endif %}
 
@@ -433,20 +437,20 @@
                 {% endif %}
 
                 <div class="you-dictator">
-                    <b>{{ you }}</b>
+                    <b>{{ you|safe }}</b>
                 </div>
 
             </div>
 
 
             <p style="text-align: center;">
-                <strong>{{ dict_decision_question }}</strong>
+                <strong>{{ dict_decision_question|safe }}</strong>
             </p>
 
             {% if not "0DG" in player.treatment %}
 
             <p style="text-align: center;">
-                {{ dict_decision_mind }}
+                {{ dict_decision_mind|safe }}
             </p>
 
             {% endif %}
@@ -460,7 +464,7 @@
             {% if "0DG" in player.treatment %}
                 <br>
                 <p style="text-align: center;">
-                    {{ dict_decision_hover }}
+                    {{ dict_decision_hover|safe }}
                 </p>
             {% endif %}
 
