--- a/crowding_out/ConditionalCoopInterdepPage.html
+++ b/crowding_out/ConditionalCoopInterdepPage.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
 <div class="block-header">
     {{ button_block|safe }}
 </div>
