--- a/demographics/CommentBox.html
+++ b/demographics/CommentBox.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
     <p style="text-align: center; font-size: 26px; "> {{ feedback|safe }} </p>
 
 <div style="display: flex; justify-content: center">
