--- a/demographics/Demographics.html
+++ b/demographics/Demographics.html
@@ -1,5 +1,8 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
 
     <p style="text-align: center; font-size: 26px; "> {{ additional_questions|safe }} </p>
 
@@ -39,6 +42,7 @@
 
 
         <div class="card-body">
+
 
             <!--    <p>-->
             <!--        Please answer the following questions. These are used for demographic purposes only.-->
