--- a/demographics/ProlificLink.html
+++ b/demographics/ProlificLink.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
     <p style="text-align: center; font-size: 26px; "> {{ thank_you_short|safe }} </p>
 
 {{ endblock }}
