--- a/dice_task/FillerEndBlock2.html
+++ b/dice_task/FillerEndBlock2.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
     <p style="text-align: center; font-size: 26px; "> {{ filler_title }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
