--- a/pref_2PP_3PP/FillerEndBlock1.html
+++ b/pref_2PP_3PP/FillerEndBlock1.html
@@ -1,5 +1,9 @@
 {{ block title }}
 
+{% if lang == "ar" %}
+<html lang="ar" dir="rtl">
+{% endif %}
+
     <p style="text-align: center; font-size: 26px; "> {{ filler1_title }} </p>
 
 <div style="display: flex; justify-content: center">
