adjust decision_num

--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -8,7 +8,7 @@
     {{ button_block|safe }}
 </p>
 
-<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
