--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -8,7 +8,7 @@
     {{ button_block|safe }}
 </div>
 
-<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision|safe }} </p>
 
 <div style="display: flex; justify-content: center">
     <label>
