--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -8,7 +8,7 @@
     {{ button_block|safe }}
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
