--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -172,13 +172,13 @@
         <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
 
         <div class="person-a">
-            <b>{{ person_a|safe }}</b>
+            <b>{{ PERSON_spacing|safe }}{{ person_a|safe }}</b>
         </div>
         <div class="person-b">
-            <b>{{ person_b|safe }}</b>
+            <b>{{ PERSON_spacing|safe }}{{ person_b|safe }}</b>
         </div>
         <div class="person-c">
-            <b>{{ person_c|safe }}</b>
+            <b>{{ PERSON_spacing|safe }}{{ person_c|safe }}</b>
         </div>
 
         <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
