--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -559,10 +559,10 @@
             <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/0DG give.png">
 
             <div class="person-a">
-                <b>{{ person_a }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_a }}</b>
             </div>
             <div class="person-b">
-                <b>{{ person_b }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_b }}</b>
             </div>
 
             <span class='coinstackD' ></span>
@@ -604,10 +604,10 @@
             <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/0DG give.png">
 
             <div class="person-a">
-                <b>{{ person_a }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_a }}</b>
             </div>
             <div class="person-b">
-                <b>{{ person_b }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_b }}</b>
             </div>
 
             <span class='coinstackD' ></span>
@@ -634,10 +634,10 @@
             <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/2PP_2 punish.png">
 
             <div class="person-a">
-                <b>{{ person_a }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_a }}</b>
             </div>
             <div class="person-b">
-                <b>{{ person_b }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_b }}</b>
             </div>
 
             <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-" style="top: -18px;">
@@ -659,13 +659,13 @@
             <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
 
             <div class="person-a" style="top:29%">
-                <b>{{ person_a }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_a }}</b>
             </div>
             <div class="person-b" style="top:29%">
-                <b>{{ person_b }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_b }}</b>
             </div>
             <div class="person-c">
-                <b>{{ person_c }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_c }}</b>
             </div>
 
             <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
@@ -734,13 +734,13 @@
             <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
 
             <div class="person-a">
-                <b>{{ person_a }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_a }}</b>
             </div>
             <div class="person-b">
-                <b>{{ person_b }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_b }}</b>
             </div>
             <div class="person-c">
-                <b>{{ person_c }}</b>
+                <b>{{ PERSON_spacing|safe }}{{ person_c }}</b>
             </div>
 
             <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
